// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`development Adding styles plugin to configuration 1`] = `
Object {
  "entry": "./src/index.ts",
  "mode": "development",
  "module": Object {
    "rules": Array [
      Object {
        "test": /\\\\\\.\\(sa\\|sc\\|c\\)ss\\$/,
        "use": Array [
          Object {},
          Object {
            "loader": "style-loader",
          },
          Object {
            "loader": "postcss-loader",
          },
          Object {
            "loader": "sass-loader",
          },
          Object {
            "loader": "css-loader",
          },
        ],
      },
      Object {
        "test": /\\\\\\.\\(woff\\|woff2\\|eot\\|ttf\\|otf\\)\\$/,
        "use": Array [
          Object {
            "loader": "url-loader",
            "options": Object {
              "limit": 10000,
              "name": "./assets/fonts/[name].[ext]",
              "publicPath": "./",
            },
          },
        ],
      },
    ],
  },
  "node": Object {
    "fs": "empty",
    "net": "empty",
    "tls": "empty",
  },
  "output": Object {
    "chunkFilename": "[name].bundle.js",
    "filename": "[name].bundle.js",
    "path": "./src/__tests__///./test-project//dist",
    "publicPath": "./",
  },
  "resolve": Object {
    "extensions": Array [
      ".css",
      ".scss",
    ],
  },
}
`;

exports[`development Adding styles plugin with css options to configuration 1`] = `
Object {
  "entry": "./src/index.ts",
  "mode": "development",
  "module": Object {
    "rules": Array [
      Object {
        "test": /\\\\\\.\\(sa\\|sc\\|c\\)ss\\$/,
        "use": Array [
          Object {},
          Object {
            "loader": "style-loader",
          },
          Object {
            "loader": "postcss-loader",
          },
          Object {
            "loader": "sass-loader",
          },
          Object {
            "loader": "css-loader",
            "options": Object {
              "url": true,
            },
          },
        ],
      },
      Object {
        "test": /\\\\\\.\\(woff\\|woff2\\|eot\\|ttf\\|otf\\)\\$/,
        "use": Array [
          Object {
            "loader": "url-loader",
            "options": Object {
              "limit": 10000,
              "name": "./assets/fonts/[name].[ext]",
              "publicPath": "./",
            },
          },
        ],
      },
    ],
  },
  "node": Object {
    "fs": "empty",
    "net": "empty",
    "tls": "empty",
  },
  "output": Object {
    "chunkFilename": "[name].bundle.js",
    "filename": "[name].bundle.js",
    "path": "./src/__tests__///./test-project//dist",
    "publicPath": "./",
  },
  "resolve": Object {
    "extensions": Array [
      ".css",
      ".scss",
    ],
  },
}
`;

exports[`development Adding styles plugin with fontsOutputLocation to configuration 1`] = `
Object {
  "entry": "./src/index.ts",
  "mode": "development",
  "module": Object {
    "rules": Array [
      Object {
        "test": /\\\\\\.\\(sa\\|sc\\|c\\)ss\\$/,
        "use": Array [
          Object {},
          Object {
            "loader": "style-loader",
          },
          Object {
            "loader": "postcss-loader",
          },
          Object {
            "loader": "sass-loader",
          },
          Object {
            "loader": "css-loader",
          },
        ],
      },
      Object {
        "test": /\\\\\\.\\(woff\\|woff2\\|eot\\|ttf\\|otf\\)\\$/,
        "use": Array [
          Object {
            "loader": "url-loader",
            "options": Object {
              "limit": 10000,
              "name": "../assets/fonts/[name].[ext]",
              "publicPath": "./",
            },
          },
        ],
      },
    ],
  },
  "node": Object {
    "fs": "empty",
    "net": "empty",
    "tls": "empty",
  },
  "output": Object {
    "chunkFilename": "[name].bundle.js",
    "filename": "[name].bundle.js",
    "path": "./src/__tests__///./test-project//dist",
    "publicPath": "./",
  },
  "resolve": Object {
    "extensions": Array [
      ".css",
      ".scss",
    ],
  },
}
`;

exports[`development Adding styles plugin with options to configuration 1`] = `
Object {
  "entry": "./src/index.ts",
  "mode": "development",
  "module": Object {
    "rules": Array [
      Object {
        "test": /\\\\\\.\\(sa\\|sc\\|c\\)ss\\$/,
        "use": Array [
          Object {},
          Object {
            "loader": "style-loader",
          },
          Object {
            "loader": "postcss-loader",
          },
          Object {
            "loader": "sass-loader",
          },
          Object {
            "loader": "css-loader",
          },
        ],
      },
      Object {
        "test": /\\\\\\.\\(woff\\|woff2\\|eot\\|ttf\\|otf\\)\\$/,
        "use": Array [
          Object {
            "loader": "url-loader",
            "options": Object {
              "limit": 10000,
              "name": "./assets/fonts/[name].[ext]",
              "publicPath": "../plugins",
            },
          },
        ],
      },
    ],
  },
  "node": Object {
    "fs": "empty",
    "net": "empty",
    "tls": "empty",
  },
  "output": Object {
    "chunkFilename": "[name].bundle.js",
    "filename": "[name].bundle.js",
    "path": "./src/__tests__///./test-project//dist",
    "publicPath": "./",
  },
  "resolve": Object {
    "extensions": Array [
      ".css",
      ".scss",
    ],
  },
}
`;

exports[`development Adding styles plugin with post css options to configuration 1`] = `
Object {
  "entry": "./src/index.ts",
  "mode": "development",
  "module": Object {
    "rules": Array [
      Object {
        "test": /\\\\\\.\\(sa\\|sc\\|c\\)ss\\$/,
        "use": Array [
          Object {},
          Object {
            "loader": "style-loader",
          },
          Object {
            "loader": "postcss-loader",
            "options": Object {
              "url": true,
            },
          },
          Object {
            "loader": "sass-loader",
          },
          Object {
            "loader": "css-loader",
          },
        ],
      },
      Object {
        "test": /\\\\\\.\\(woff\\|woff2\\|eot\\|ttf\\|otf\\)\\$/,
        "use": Array [
          Object {
            "loader": "url-loader",
            "options": Object {
              "limit": 10000,
              "name": "./assets/fonts/[name].[ext]",
              "publicPath": "./",
            },
          },
        ],
      },
    ],
  },
  "node": Object {
    "fs": "empty",
    "net": "empty",
    "tls": "empty",
  },
  "output": Object {
    "chunkFilename": "[name].bundle.js",
    "filename": "[name].bundle.js",
    "path": "./src/__tests__///./test-project//dist",
    "publicPath": "./",
  },
  "resolve": Object {
    "extensions": Array [
      ".css",
      ".scss",
    ],
  },
}
`;

exports[`development Adding styles plugin with post sass options to configuration 1`] = `
Object {
  "entry": "./src/index.ts",
  "mode": "development",
  "module": Object {
    "rules": Array [
      Object {
        "test": /\\\\\\.\\(sa\\|sc\\|c\\)ss\\$/,
        "use": Array [
          Object {},
          Object {
            "loader": "style-loader",
          },
          Object {
            "loader": "postcss-loader",
          },
          Object {
            "loader": "sass-loader",
            "options": Object {
              "includePaths": Array [
                "absolute/path/a",
                "absolute/path/b",
              ],
            },
          },
          Object {
            "loader": "css-loader",
          },
        ],
      },
      Object {
        "test": /\\\\\\.\\(woff\\|woff2\\|eot\\|ttf\\|otf\\)\\$/,
        "use": Array [
          Object {
            "loader": "url-loader",
            "options": Object {
              "limit": 10000,
              "name": "./assets/fonts/[name].[ext]",
              "publicPath": "./",
            },
          },
        ],
      },
    ],
  },
  "node": Object {
    "fs": "empty",
    "net": "empty",
    "tls": "empty",
  },
  "output": Object {
    "chunkFilename": "[name].bundle.js",
    "filename": "[name].bundle.js",
    "path": "./src/__tests__///./test-project//dist",
    "publicPath": "./",
  },
  "resolve": Object {
    "extensions": Array [
      ".css",
      ".scss",
    ],
  },
}
`;

exports[`development Adding styles plugin with style options to configuration 1`] = `
Object {
  "entry": "./src/index.ts",
  "mode": "development",
  "module": Object {
    "rules": Array [
      Object {
        "test": /\\\\\\.\\(sa\\|sc\\|c\\)ss\\$/,
        "use": Array [
          Object {},
          Object {
            "loader": "style-loader",
            "options": Object {
              "hmr": false,
            },
          },
          Object {
            "loader": "postcss-loader",
          },
          Object {
            "loader": "sass-loader",
          },
          Object {
            "loader": "css-loader",
          },
        ],
      },
      Object {
        "test": /\\\\\\.\\(woff\\|woff2\\|eot\\|ttf\\|otf\\)\\$/,
        "use": Array [
          Object {
            "loader": "url-loader",
            "options": Object {
              "limit": 10000,
              "name": "./assets/fonts/[name].[ext]",
              "publicPath": "./",
            },
          },
        ],
      },
    ],
  },
  "node": Object {
    "fs": "empty",
    "net": "empty",
    "tls": "empty",
  },
  "output": Object {
    "chunkFilename": "[name].bundle.js",
    "filename": "[name].bundle.js",
    "path": "./src/__tests__///./test-project//dist",
    "publicPath": "./",
  },
  "resolve": Object {
    "extensions": Array [
      ".css",
      ".scss",
    ],
  },
}
`;

exports[`development Adding styles plugin with url options as object to configuration 1`] = `
Object {
  "entry": "./src/index.ts",
  "mode": "development",
  "module": Object {
    "rules": Array [
      Object {
        "test": /\\\\\\.\\(sa\\|sc\\|c\\)ss\\$/,
        "use": Array [
          Object {},
          Object {
            "loader": "style-loader",
          },
          Object {
            "loader": "postcss-loader",
          },
          Object {
            "loader": "sass-loader",
          },
          Object {
            "loader": "css-loader",
          },
        ],
      },
      Object {
        "test": /\\\\\\.\\(woff\\|woff2\\|eot\\|ttf\\|otf\\)\\$/,
        "use": Array [
          Object {
            "ident": undefined,
            "loader": "url-loader",
            "options": Object {
              "limit": 10000,
              "name": "./assets/fonts/[name].[ext]",
              "publicPath": "./",
            },
            "query": undefined,
          },
        ],
      },
    ],
  },
  "node": Object {
    "fs": "empty",
    "net": "empty",
    "tls": "empty",
  },
  "output": Object {
    "chunkFilename": "[name].bundle.js",
    "filename": "[name].bundle.js",
    "path": "./src/__tests__///./test-project//dist",
    "publicPath": "./",
  },
  "resolve": Object {
    "extensions": Array [
      ".css",
      ".scss",
    ],
  },
}
`;

exports[`development PostCss config do not exist 1`] = `
Object {
  "entry": "./src/index.ts",
  "mode": "development",
  "module": Object {
    "rules": Array [
      Object {
        "test": /\\\\\\.\\(sa\\|sc\\|c\\)ss\\$/,
        "use": Array [
          Object {},
          Object {
            "loader": "style-loader",
          },
          Object {
            "loader": "postcss-loader",
          },
          Object {
            "loader": "sass-loader",
          },
          Object {
            "loader": "css-loader",
          },
        ],
      },
      Object {
        "test": /\\\\\\.\\(woff\\|woff2\\|eot\\|ttf\\|otf\\)\\$/,
        "use": Array [
          Object {
            "loader": "url-loader",
            "options": Object {
              "limit": 10000,
              "name": "./assets/fonts/[name].[ext]",
              "publicPath": "./",
            },
          },
        ],
      },
    ],
  },
  "node": Object {
    "fs": "empty",
    "net": "empty",
    "tls": "empty",
  },
  "output": Object {
    "chunkFilename": "[name].bundle.js",
    "filename": "[name].bundle.js",
    "path": "./src/__tests__///./test-project//dist",
    "publicPath": "./",
  },
  "resolve": Object {
    "extensions": Array [
      ".css",
      ".scss",
    ],
  },
}
`;

exports[`production Adding styles plugin to configuration in production mode 1`] = `
Object {
  "entry": "./src/index.ts",
  "mode": "production",
  "module": Object {
    "rules": Array [
      Object {
        "test": /\\\\\\.\\(sa\\|sc\\|c\\)ss\\$/,
        "use": Array [
          "",
          Object {
            "loader": "style-loader",
          },
          Object {
            "loader": "postcss-loader",
          },
          Object {
            "loader": "sass-loader",
          },
          Object {
            "loader": "css-loader",
          },
        ],
      },
      Object {
        "test": /\\\\\\.\\(woff\\|woff2\\|eot\\|ttf\\|otf\\)\\$/,
        "use": Array [
          Object {
            "loader": "url-loader",
            "options": Object {
              "limit": 10000,
              "name": "./assets/fonts/[name].[ext]",
              "publicPath": "./",
            },
          },
        ],
      },
    ],
  },
  "node": Object {
    "fs": "empty",
    "net": "empty",
    "tls": "empty",
  },
  "optimization": Object {
    "minimizer": Array [
      OptimizeCssAssetsWebpackPlugin {
        "apply": [MockFunction],
        "buildPluginDescriptor": [MockFunction],
        "createAsset": [MockFunction],
        "deleteAssets": [MockFunction],
        "getAssetsAndProcessors": [MockFunction],
        "print": [MockFunction],
        "process": [MockFunction],
        "processCss": [MockFunction],
        "resetInternalState": [MockFunction],
        "setAsset": [MockFunction],
      },
    ],
  },
  "output": Object {
    "chunkFilename": "[name].bundle.js",
    "filename": "[name].bundle.js",
    "path": "./src/__tests__///./test-project//dist",
    "publicPath": "./",
  },
  "plugins": Array [
    MiniCssExtractPlugin {
      "options": Object {
        "chunkFilename": "[name].css",
        "filename": "[name].css",
      },
    },
  ],
  "resolve": Object {
    "extensions": Array [
      ".css",
      ".scss",
    ],
  },
}
`;

exports[`production Adding styles plugin to configuration with mini css options 1`] = `
Object {
  "entry": "./src/index.ts",
  "mode": "production",
  "module": Object {
    "rules": Array [
      Object {
        "test": /\\\\\\.\\(sa\\|sc\\|c\\)ss\\$/,
        "use": Array [
          "",
          Object {
            "loader": "style-loader",
          },
          Object {
            "loader": "postcss-loader",
          },
          Object {
            "loader": "sass-loader",
          },
          Object {
            "loader": "css-loader",
          },
        ],
      },
      Object {
        "test": /\\\\\\.\\(woff\\|woff2\\|eot\\|ttf\\|otf\\)\\$/,
        "use": Array [
          Object {
            "loader": "url-loader",
            "options": Object {
              "limit": 10000,
              "name": "./assets/fonts/[name].[ext]",
              "publicPath": "./",
            },
          },
        ],
      },
    ],
  },
  "node": Object {
    "fs": "empty",
    "net": "empty",
    "tls": "empty",
  },
  "optimization": Object {
    "minimizer": Array [
      OptimizeCssAssetsWebpackPlugin {
        "apply": [MockFunction],
        "buildPluginDescriptor": [MockFunction],
        "createAsset": [MockFunction],
        "deleteAssets": [MockFunction],
        "getAssetsAndProcessors": [MockFunction],
        "print": [MockFunction],
        "process": [MockFunction],
        "processCss": [MockFunction],
        "resetInternalState": [MockFunction],
        "setAsset": [MockFunction],
      },
    ],
  },
  "output": Object {
    "chunkFilename": "[name].bundle.js",
    "filename": "[name].bundle.js",
    "path": "./src/__tests__///./test-project//dist",
    "publicPath": "./",
  },
  "plugins": Array [
    MiniCssExtractPlugin {
      "options": Object {
        "chunkFilename": "[name].[contenthash].css",
        "filename": "[name].[chunkhash].css",
      },
    },
  ],
  "resolve": Object {
    "extensions": Array [
      ".css",
      ".scss",
    ],
  },
}
`;
